--- a/dash-reference-ui/host.config.json
+++ b/dash-reference-ui/host.config.json
@@ -2,7 +2,7 @@
   "hosting": {
     "headers": [
       {
-        "source": "/build/p-*",
+        "source": "/dash-reference-ui/build/p-*",
         "headers": [
           {
             "key": "Cache-Control",
