--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "generate": "stencil generate"
   },
   "dependencies": {
+    "@ionic/core": "^5.5.1",
     "@stencil/core": "^2.0.1",
+    "@stencil/sass": "^1.4.0",
     "dashjs": "^3.1.3"
   },
   "license": "MIT",
