--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dashjs-components",
   "version": "0.0.1",
+  "type": "module",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
@@ -25,10 +26,14 @@
     "@ionic/core": "^5.5.1",
     "@stencil/core": "^2.0.1",
     "@stencil/sass": "^1.4.0",
-    "dashjs": "^3.1.3"
+    "dashjs": "^3.1.3",
+    "quicktype-core": "^6.0.69",
+    "typescript-json-schema": "^0.45.0"
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^14.14.10",
+    "jsdoc-api": "^6.0.0",
     "rollup-plugin-node-polyfills": "^0.2.1"
   }
 }
