--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@ionic/core": "^5.5.1",
     "@stencil/core": "^2.0.1",
     "@stencil/sass": "^1.4.0",
-    "dashjs": "^3.1.3"
+    "chart.js": "^2.9.4",
+    "dashjs": "^3.1.3",
+    "flot": "^4.2.1",
+    "jquery": "^3.5.1"
   },
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "rollup-plugin-node-polyfills": "^0.2.1"
   }
 }
