--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "@stencil/core": "^2.0.1",
     "@stencil/sass": "^1.4.0",
     "chart.js": "^2.9.4",
-    "dashjs": "^3.1.3",
-    "flot": "^4.2.1",
-    "jquery": "^3.5.1"
+    "dashjs": "^3.1.3"
   },
   "license": "MIT",
   "devDependencies": {
