--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@stencil/core": "^2.0.1",
     "@stencil/sass": "^1.4.0",
     "dashjs": "^3.1.3",
+    "object-path": "^0.11.5",
     "quicktype-core": "^6.0.69",
     "typescript-json-schema": "^0.45.0"
   },
