--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -1,7 +1,11 @@
-name: pr-ci
+name: pr-checks
 
 on:
   pull_request:
+
+env:
+  RESSOURCE_GROUP: awtpj2021
+  STORAGE_NAME: awtpj${{ github.event.pull_request.number }}
 
 jobs:
   deploy:
@@ -18,3 +22,34 @@ jobs:
         
       - name: Build package
         run: npm run build
+      
+      - name: Azure Login
+        uses: azure/login@v1.1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Azure CLI script
+        uses: azure/CLI@v1
+        with:
+          azcliversion: 2.0.72
+          inlineScript: |
+            az storage account create --kind StorageV2 --name ${{ env.STORAGE_NAME }} --resource-group ${{ env.RESSOURCE_GROUP }} --subscription ${{ SECRETS.AZURE_SUBSCRIPTION_ID }}
+            az storage blob service-properties update --account-name ${{ env.STORAGE_NAME }} --static-website --404-document 404.html --index-document index.html --subscription ${{ SECRETS.AZURE_SUBSCRIPTION_ID }}
+            export key=$(az storage account keys list --account-name ${{ env.STORAGE_NAME }} --resource-group  ${{ env.RESSOURCE_GROUP }} --subscription ${{ SECRETS.AZURE_SUBSCRIPTION_ID }} --query "[0].value")
+            az storage blob upload-batch -d '$web' -s ./www --account-name ${{ env.STORAGE_NAME }} --account-key $key --subscription ${{ SECRETS.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Find Comment
+        uses: peter-evans/find-comment@v1
+        id: fc
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body-includes: This PR is available as a preview
+
+      - name: Create comment
+        if: ${{ steps.fc.outputs.comment-id == 0 }}
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            This PR is available as a preview [here](https://${{ env.STORAGE_NAME }}.z16.web.core.windows.net).
+          reaction-type: "rocket"
