--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/core": "^5.5.1",
     "@stencil/core": "^2.0.1",
     "@stencil/sass": "^1.4.0",
+    "chart.js": "^2.9.4",
     "dashjs": "^3.1.3",
     "quicktype-core": "^6.0.69",
     "typescript-json-schema": "^0.45.0"
