--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@stencil/sass": "^1.4.0",
     "chart.js": "^2.9.4",
     "dashjs": "^3.1.3",
+    "object-path": "^0.11.5",
     "quicktype-core": "^6.0.69",
     "typescript-json-schema": "^0.45.0"
   },
