--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "dashjs": "^3.1.3",
     "object-path": "^0.11.5",
     "quicktype-core": "^6.0.69",
-    "typescript-json-schema": "^0.45.0"
+    "typescript-json-schema": "^0.45.0",
+    "typescript-parser": "^2.6.1"
   },
   "license": "MIT",
   "devDependencies": {
