--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@stencil/sass": "^1.4.1",
     "chart.js": "^2.9.4",
     "dashjs": "^3.2.0",
+    "ionicons": "^5.3.0",
     "object-path": "^0.11.5",
     "quicktype-core": "^6.0.69",
     "typescript-json-schema": "^0.45.1",
