--- a/package.json
+++ b/package.json
@@ -39,8 +39,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.22",
+    "@types/puppeteer": "^5.4.0",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
     "jsdoc-api": "^6.0.0",
+    "puppeteer": "^5.4.1",
     "quicktype-core": "^6.0.69",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "typescript-json-schema": "^0.45.1",
