--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -16,13 +16,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-          
+
       - name: Install Packages
         run: npm install
-        
+
       - name: Build package
         run: npm run build
-      
+
       - name: Azure Login
         uses: azure/login@v1.1
         with:
@@ -53,3 +53,6 @@ jobs:
           body: |
             This PR is available as a preview [here](https://${{ env.STORAGE_NAME }}.z16.web.core.windows.net).
           reaction-type: "rocket"
+
+      - name: Build package
+        run: npm run test
