--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "gen-meta": "ts-node -P tsconfig.metadata.json generate-metadata.ts"
+    "gen-meta": "ts-node -P tsconfig.metadata.json generate-metadata.ts",
+    "lint": "eslint src/**/*{.ts,.tsx}"
   },
   "dependencies": {
     "@beck24/stencil-component-prefetch": "^1.0.1",
@@ -39,9 +40,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@stencil/eslint-plugin": "^0.3.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.22",
     "@types/puppeteer": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "eslint": "^7.20.0",
+    "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "jsdoc-api": "^6.0.0",
