add common eslint rules for typescript and fix errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,15 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "extends": ["plugin:@stencil/recommended"],
+  "extends": [
+    // TODO: add later in order to be consistent
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@stencil/recommended"
+  ],
   "rules": {
     "@stencil/decorators-style": ["error", { "event": "multiline" }],
     "@stencil/render-returns-host": "warn",
-    "no-console": "error"
+    "no-console": "error",
+    "@typescript-eslint/no-inferrable-types": "off"
   }
 }
