--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@octokit/rest": "^18.2.0",
     "@stencil/eslint-plugin": "^0.3.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.22",
     "@types/puppeteer": "^5.4.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "bottleneck": "^2.19.5",
+    "dotenv": "^8.2.0",
     "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
