--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,15 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-          
+
       - name: Install Packages
         run: npm install
-        
+
+      - name: Generate Metadata
+        run: npm run gen-meta
+        env:
+          ONLY_FIRST: "false"
+
       - name: Build package
         run: npm run build
 
@@ -26,7 +31,7 @@ jobs:
         with:
           name: app
           path: ./www
-          
+
       - name: Publish to blob storage
         uses: bacongobbler/azure-blob-storage-upload@v1.0.0
         with:
