fix generator scripts

--- a/metadata/overwrites/v3.2.0/settingsMetaData.json
+++ b/metadata/overwrites/v3.2.0/settingsMetaData.json
@@ -1,6 +1,6 @@
 [
   {
-    "enum-description": ["None", "Fatal", "Error", "Warning", "Info", "Debug"],
+    "enumLabels": ["None", "Fatal", "Error", "Warning", "Info", "Debug"],
     "id": "settings.debug.logLevel",
     "example": 0
   }
