--- a/src/static/gen/settingsMetaData-v3.2.0.json
+++ b/src/static/gen/settingsMetaData-v3.2.0.json
@@ -19,7 +19,7 @@
     ],
     "name": "logLevel",
     "parent": "debug",
-    "enum-description": [
+    "enumLabels": [
       "None",
       "Fatal",
       "Error",
