Daniel/settings localstorage (#62)
* add more eslint rules

* fix metadata

* add autoupdate to localstorage

* fix select bug

* fix generator scripts

* add labels to setting select

--- a/metadata/overwrites/v3.2.0/settingsMetaData.json
+++ b/metadata/overwrites/v3.2.0/settingsMetaData.json
@@ -1,6 +1,7 @@
 [
   {
-    "enum-description": ["None", "Fatal", "Error", "Warning", "Info", "Debug"],
-    "id": "settings.debug.logLevel"
+    "enumLabels": ["None", "Fatal", "Error", "Warning", "Info", "Debug"],
+    "id": "settings.debug.logLevel",
+    "example": 0
   }
 ]
