--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
     "plugin:@stencil/recommended"
   ],
   "rules": {
-	 "@stencil/decorators-style": [],
+	 "@stencil/decorators-style": ["error", { "event": "ignore" }],
     "@stencil/render-returns-host": "warn",
     "no-console": "error",
     "@typescript-eslint/no-inferrable-types": "off"
