add lint rule for render function

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,12 @@
     "@stencil/decorators-style": ["error", { "event": "multiline" }],
     "@stencil/render-returns-host": "warn",
     "no-console": "error",
-    "@typescript-eslint/no-inferrable-types": "off"
+    "@typescript-eslint/no-inferrable-types": "off",
+    "@typescript-eslint/explicit-module-boundary-types": [
+      "error",
+      {
+        "allowedNames": ["render"]
+      }
+    ]
   }
 }
