fixed live icon (#68)
* fix stencil componentWillLoad warning

* fix controls error

* remove unused prop

* fix bugs

* update localStorage updateFunction

* removing consoles :(

* final? bugfix

* forEach:))

* => missing

* done?

* multiline?

* multiline what

* lint line disable

* multiline rule removal

* style fix

* style fix2

* ignore

* lint update

* lint update 2

* lint update 3

* lint update 4

* lint update #4 or 5

* lint update #6

* fix controlbar console error

* fixed live icon

* lint fixes

* lint fixes

* lint fixes

Co-authored-by: DanielHabenicht <daniel-habenicht@outlook.de>
Co-authored-by: Huy Viet Nguyen <huy.v.nguyen@campus.tu-berlin.de>
Co-authored-by: HViet <huyvietnguyen@hotmail.de>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
   },
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:@stencil/recommended"],
   "rules": {
-    "@stencil/decorators-style": ["error", { "event": "multiline" }],
+	 "@stencil/decorators-style": ["error", { "event": "ignore" }],
     "@stencil/render-returns-host": "warn",
     "no-console": "error",
     "@typescript-eslint/no-inferrable-types": "off",
